qa/workload-manifests/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: kube-system
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/jessie-dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always

  ## https://kubernetes.io/docs/tasks/administer-cluster/dns-debugging-resolution/
  ## kubectl exec -ti dnsutils -- cat /etc/resolv.conf
  ## kubectl exec -i -t dnsutils -- nslookup kubernetes.default

#security context example setting
## apiVersion: v1
## kind: Pod
## metadata:
##   name: security-context-demo
## spec:
##   securityContext:
##     runAsUser: 1000
##     runAsGroup: 3000
##     fsGroup: 2000
##   volumes:
##   - name: sec-ctx-vol
##     emptyDir: {}
##   containers:
##   - name: sec-ctx-demo
##     image: busybox:1.28
##     command: [ "sh", "-c", "sleep 1h" ]
##     volumeMounts:
##     - name: sec-ctx-vol
##       mountPath: /data/demo
##     securityContext:
##       allowPrivilegeEscalation: false
