qa/workload-manifests/use-vsphere-volume.yaml
apiVersion: "v1"
kind: "Pod"
metadata:
  name: "basic"
  labels:
    name: "basic"
spec:
  containers:
  - name: "basic"
    image: ranchertest/mytestcontainer:unprivileged
    ports:
    - containerPort: 8080
      name: "basic"
    volumeMounts:
    - mountPath: "/data"
      name: "pvol"
  volumes:
  - name: "pvol"
    persistentVolumeClaim:
      claimName: "claim1"
