qa/workload-manifests/whoami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: traefiklabs
    name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
      - name: whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami

spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  selector:
    app: traefiklabs
    task: whoami
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-six
  namespace: whoami
spec:
  type: LoadBalancer
  selector:
    app: traefiklabs
    task: whoami
  ipFamilies:
    - IPv6
  ipFamilyPolicy: SingleStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-require-dual
  namespace: whoami
spec:
  type: LoadBalancer
  selector:
    app: traefiklabs
    task: whoami
  ipFamilyPolicy: RequireDualStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-prefer-dual
  namespace: whoami
spec:
  type: LoadBalancer
  selector:
    app: traefiklabs
    task: whoami
  ipFamilyPolicy: PreferDualStack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami
  namespace: whoami
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /qa
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: /test
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
          - path: /who-six
            pathType: Exact
            backend:
              service:
                name: whoami-six
                port:
                  number: 80
          - path: /require-dual
            pathType: Exact
            backend:
              service:
                name: whoami-require-dual
                port:
                  number: 80
          - path: /prefer-dual
            pathType: Exact
            backend:
              service:
                name: whoami-prefer-dual
                port:
                  number: 80
